<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="450dp"
        tools:ignore="MissingConstraints"
        tools:layout_editor_absoluteX="0dp"
        tools:layout_editor_absoluteY="280dp">

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/appCompatButton"
            android:layout_width="70dp"
            android:layout_height="70dp"
            android:textSize="25dp"
            android:text="@string/point"
            android:background="@drawable/button"
            android:backgroundTint="@color/white"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/appCompatButton4"
            app:layout_constraintVertical_bias="0.5"
            tools:ignore="MissingConstraints"
            tools:layout_editor_absoluteX="26dp"></androidx.appcompat.widget.AppCompatButton>

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/appCompatButton4"
            android:layout_width="70dp"
            android:layout_height="70dp"
            android:background="@drawable/button"
            android:backgroundTint="@color/white"
            android:text="1"
            android:textSize="25dp"
            app:layout_constraintBottom_toTopOf="@+id/appCompatButton"
            app:layout_constraintEnd_toStartOf="@id/two"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/four"
            app:layout_constraintVertical_bias="0.5"
            tools:ignore="MissingConstraints"></androidx.appcompat.widget.AppCompatButton>

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/four"
            android:layout_width="70dp"
            android:layout_height="70dp"
            android:background="@drawable/button"
            android:backgroundTint="@color/white"
            android:text="4"
            android:textSize="25dp"
            app:layout_constraintBottom_toTopOf="@+id/appCompatButton4"
            app:layout_constraintEnd_toStartOf="@id/five"
            app:layout_constraintHorizontal_bias="0.49"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/seven"
            app:layout_constraintVertical_bias="0.5"
            tools:ignore="MissingConstraints"></androidx.appcompat.widget.AppCompatButton>

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/two"
            android:layout_width="70dp"
            android:layout_height="70dp"

            android:background="@drawable/button"
            android:backgroundTint="@color/white"
            android:text="2"
            android:textSize="25dp"
            app:layout_constraintEnd_toStartOf="@id/three"
            app:layout_constraintStart_toEndOf="@+id/appCompatButton4"
            tools:ignore="MissingConstraints"
            tools:layout_editor_absoluteY="293dp"></androidx.appcompat.widget.AppCompatButton>

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/appCompatButton20"
            android:layout_width="70dp"
            android:layout_height="70dp"
            android:background="@drawable/button"
            android:backgroundTint="@color/purple"
            android:text="@string/kopaytiruv"
            android:textColor="@color/white"
            android:textSize="25dp"
            app:layout_constraintBottom_toTopOf="@+id/minus"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toEndOf="@+id/nine"
            app:layout_constraintTop_toBottomOf="@+id/boluv"
            app:layout_constraintVertical_bias="0.5"
            tools:ignore="MissingConstraints"></androidx.appcompat.widget.AppCompatButton>

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/eight"
            android:layout_width="70dp"
            android:layout_height="70dp"

app:layout_constraintBottom_toTopOf="@id/five"
            android:background="@drawable/button"
            android:backgroundTint="@color/white"
            android:text="8"
            android:textSize="25dp"
            app:layout_constraintEnd_toStartOf="@+id/nine"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toEndOf="@+id/seven"
            app:layout_constraintTop_toBottomOf="@id/qavs_minus"
            tools:ignore="MissingConstraints"></androidx.appcompat.widget.AppCompatButton>

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/seven"
            android:layout_width="70dp"
            android:layout_height="70dp"
            android:background="@drawable/button"
            android:backgroundTint="@color/white"
            android:text="7"
            android:textSize="25dp"
            app:layout_constraintBottom_toTopOf="@+id/four"
            app:layout_constraintEnd_toStartOf="@+id/eight"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/c"
            app:layout_constraintVertical_bias="0.5"
            tools:ignore="MissingConstraints"></androidx.appcompat.widget.AppCompatButton>

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/three"
            android:layout_width="70dp"
            android:layout_height="70dp"

            android:layout_marginStart="76dp"
            android:background="@drawable/button"
            android:backgroundTint="@color/white"
            android:text="3"
            android:textSize="25dp"
            app:layout_constraintBottom_toTopOf="@+id/appCompatButton3"
            app:layout_constraintStart_toEndOf="@+id/two"
            app:layout_constraintTop_toBottomOf="@+id/six"
            app:layout_constraintVertical_bias="0.5"
            tools:ignore="MissingConstraints"></androidx.appcompat.widget.AppCompatButton>

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/appCompatButton3"
            android:layout_width="70dp"
            android:layout_height="70dp"
            android:layout_marginStart="28dp"
            android:backgroundTint="@color/white"
            android:drawableEnd="@drawable/delete_last"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toEndOf="@+id/appCompatButton2"
            app:layout_constraintTop_toBottomOf="@+id/three"
            app:layout_constraintVertical_bias="0.5"
            tools:ignore="MissingConstraints"></androidx.appcompat.widget.AppCompatButton>

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/c"
            android:layout_width="70dp"
            android:layout_height="70dp"

            android:background="@drawable/button"
            android:backgroundTint="@color/gray_light"
            android:text="C"
            android:textColor="@color/black"
            android:textSize="25dp"
            app:layout_constraintEnd_toStartOf="@id/qavs_minus"
            app:layout_constraintBottom_toTopOf="@+id/seven"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.5"
            tools:ignore="MissingConstraints"></androidx.appcompat.widget.AppCompatButton>

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/six"
            android:layout_width="70dp"
            android:layout_height="70dp"

            android:background="@drawable/button"
            android:backgroundTint="@color/white"
            android:text="6"
            app:layout_constraintStart_toEndOf="@id/five"
            app:layout_constraintEnd_toStartOf="@id/minus"
            android:textSize="25dp"
            app:layout_constraintBottom_toTopOf="@id/three"
            app:layout_constraintTop_toBottomOf="@id/nine"
            tools:ignore="MissingConstraints"
            tools:layout_editor_absoluteX="219dp"></androidx.appcompat.widget.AppCompatButton>

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/foiz"
            android:layout_width="70dp"
            android:layout_height="70dp"
            android:background="@drawable/button"
            android:backgroundTint="@color/gray_light"
            android:text="@string/foiz"
            android:textColor="@color/black"
            android:textSize="25dp"
            app:layout_constraintBottom_toTopOf="@+id/nine"
            app:layout_constraintEnd_toStartOf="@id/boluv"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toEndOf="@+id/qavs_minus"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.5"
            tools:ignore="MissingConstraints"></androidx.appcompat.widget.AppCompatButton>

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/nine"
            android:layout_width="70dp"
            android:layout_height="70dp"
            android:text="9"
            android:textSize="25dp"
            android:background="@drawable/button"
            android:backgroundTint="@color/white"
            app:layout_constraintBottom_toTopOf="@+id/six"
            app:layout_constraintEnd_toStartOf="@+id/appCompatButton20"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toEndOf="@+id/eight"
            app:layout_constraintTop_toBottomOf="@+id/foiz"
            app:layout_constraintVertical_bias="0.5"
            tools:ignore="MissingConstraints,UnknownId"></androidx.appcompat.widget.AppCompatButton>

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/appCompatButton2"
            android:layout_width="70dp"
            android:layout_height="70dp"
            android:textSize="25dp"
            android:text="@string/nol"
            android:background="@drawable/button"
            android:backgroundTint="@color/white"
            app:layout_constraintStart_toEndOf="@+id/appCompatButton"
            tools:ignore="MissingConstraints"
            android:layout_marginStart="24dp"
            tools:layout_editor_absoluteY="363dp"></androidx.appcompat.widget.AppCompatButton>

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/appCompatButton19"
            android:textSize="25dp"
            android:textColor="@color/white"
            android:text="@string/teng"
            android:background="@drawable/button"
            android:backgroundTint="@color/purple"
            android:layout_width="70dp"
            android:layout_height="70dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/appCompatButton10"
            app:layout_constraintVertical_bias="0.5"
            tools:ignore="MissingConstraints"
            tools:layout_editor_absoluteX="312dp"></androidx.appcompat.widget.AppCompatButton>

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/five"
            android:layout_width="70dp"
            android:layout_height="70dp"
            android:background="@drawable/button"
            android:backgroundTint="@color/white"
            android:text="5"
            android:textSize="25dp"
            app:layout_constraintBottom_toTopOf="@id/two"
            app:layout_constraintEnd_toStartOf="@id/six"
            app:layout_constraintStart_toEndOf="@id/four"
            app:layout_constraintTop_toBottomOf="@id/eight"
            tools:ignore="MissingConstraints"></androidx.appcompat.widget.AppCompatButton>

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/appCompatButton10"
            android:layout_width="70dp"
            android:layout_height="70dp"
            android:background="@drawable/button"
            android:backgroundTint="@color/purple"
            android:text="@string/plus"
            android:textColor="@color/white"
            android:textSize="25dp"
            app:layout_constraintBottom_toTopOf="@+id/appCompatButton19"
            app:layout_constraintTop_toBottomOf="@+id/minus"
            app:layout_constraintVertical_bias="0.5"
            tools:ignore="MissingConstraints"
            tools:layout_editor_absoluteX="312dp"></androidx.appcompat.widget.AppCompatButton>

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/qavs_minus"
            android:layout_width="70dp"
            android:layout_height="70dp"
            android:background="@drawable/button"
            android:backgroundTint="@color/gray_light"
            android:text="@string/qavs_minus"
            android:textColor="@color/black"
            android:textSize="25dp"
            app:layout_constraintBottom_toTopOf="@id/eight"
            app:layout_constraintEnd_toStartOf="@id/foiz"
            app:layout_constraintStart_toEndOf="@+id/c"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.515"
            tools:ignore="MissingConstraints"></androidx.appcompat.widget.AppCompatButton>

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/minus"
            android:layout_width="70dp"
            android:layout_height="70dp"
            android:background="@drawable/button"
            android:backgroundTint="@color/purple"
            android:text="@string/minus"
            android:textColor="@color/white"
            android:textSize="25dp"
            app:layout_constraintStart_toEndOf="@id/six"
            app:layout_constraintBottom_toTopOf="@+id/appCompatButton10"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/appCompatButton20"
            app:layout_constraintVertical_bias="0.5"
            tools:ignore="MissingConstraints"></androidx.appcompat.widget.AppCompatButton>

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/boluv"
            android:layout_width="70dp"
            android:layout_height="70dp"

            android:background="@drawable/button"
            android:backgroundTint="@color/purple"
            android:text="@string/boluv"
            android:textColor="@color/white"
            android:textSize="25dp"
            app:layout_constraintBottom_toTopOf="@+id/appCompatButton20"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.161"
            app:layout_constraintStart_toEndOf="@+id/foiz"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.5"
            tools:ignore="MissingConstraints"></androidx.appcompat.widget.AppCompatButton>


    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.constraintlayout.widget.ConstraintLayout>